# LLMRouterService

./: .env.example  README.md  pyproject.toml  setup.py
llm_router/: __init__.py
llm_router/councils/: __init__.py  iterative.py  parallel.py  random.py  weighted.py
llm_router/demo/: demo.py
llm_router/exceptions/: exceptions.py
llm_router/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
llm_router/routers/: __init__.py  router.py
llm_router/schemas/: abstractions.py  config.py  council_schemas.py  env_validator.py
llm_router/selectors/: classifier.py  heuristics.py  length_selector.py  slm.py
llm_router/tests/: COVERAGE.md
llm_router/tests/councils/: test_random_council.py
llm_router/tests/exceptions/: test_exceptions.py
llm_router/tests/providers/: test_providers.py
llm_router/tests/routers/: test_router.py
llm_router/tests/schemas/: test_council_schemas.py
llm_router/tests/selectors/: test_selectors.py
